fixing the spacing in between the input box and Give Now button

--- a/style.sass
+++ b/style.sass
@@ -128,7 +128,7 @@ section.bar
   text-decoration: none
   display: inline-block
   font-size: 16px
-  margin-left: 10px
+  margin-left: 21px
   +rounded(0.2em)
   &:hover
     +hover
